<?xml version="1.0"?>
<package>
  <name>csapex_point_cloud</name>
  <version>0.0.1</version>
  <description>The csapex_point_cloud package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>
  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>
  <build_depend>csapex_ros</build_depend>
  <build_depend>csapex_transform</build_depend>
  <build_depend>csapex_opencv</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cslibs_kdtree</build_depend>
  <build_depend>cslibs_indexed_storage</build_depend>

  <run_depend>csapex</run_depend>
  <run_depend>csapex_ros</run_depend>
  <run_depend>csapex_transform</run_depend>
  <run_depend>csapex_opencv</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>cslibs_kdtree</run_depend>
  <run_depend>cslibs_indexed_storage</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
