<?xml version="1.0"?>
<package format="2">
  <name>csapex_ros</name>
  <version>0.0.0</version>
  <description>The csapex_ros package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>csapex</depend>

  <depend>csapex_core_plugins</depend>
  
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>topic_tools</depend>
  <depend>tf</depend>
  <depend>pluginlib</depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
